--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -27,13 +27,13 @@ MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearD
 
 # DataSources Test Config
 IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
-InfluxDB_mock=127.0.0.1#8086#InfluxDB#url=http://localhost:8086/#token=testToken#organization=testOrg#has_data=false
+InfluxDB_mock=127.0.0.1#8086#InfluxDB#url=http://localhost:8086/#token=testToken#organization=testOrg#has_data=false#is_read_only=false
 Parquet_mock=127.0.0.1#6667#Parquet#dir=test/iginx_mn#dummy_dir=/path/to/your/data#iginx_port=6888#has_data=false#is_read_only=false#write.buffer.size=1048576#close.flush=false
 PostgreSQL_mock=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
-MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
+MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false#is_read_only=false
 Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 FileSystem_mock=127.0.0.1#6667#FileSystem#dir=test/iginx_mn#dummy_dir=/path/to/your/data#iginx_port=6888#chunk_size_in_bytes=1048576#memory_pool_size=100#has_data=false#is_read_only=false
-MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
+MySQL_mock=127.0.0.1#3306#relational#engine=mysql#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties#has_data=false#is_read_only=false
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
