--- a/.github/actions/tpchSingleTest/action.yml
+++ b/.github/actions/tpchSingleTest/action.yml
@@ -1,11 +1,19 @@
 name: "tpch-single-test"
 description: "test tpc-h once in main branch and new branch"
+inputs:
+    status:
+        description: "status of last test"
+        default: "unfinished"
+outputs:
+    status:
+        description: "status of this test"
+        value: ${{ steps.get.outputs.status }}
 
 runs:
     using: "composite"
     steps:
         - name: Start Old IGinX
-          if: always()
+          if: inputs.status != 'ok'
           uses: ./.github/actions/iginxRunner
         #          shell: bash
         #          run: |
@@ -18,7 +26,7 @@ runs:
         #              nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
 
         - name: Run TPCH Test on Old IGinX
-          if: always()
+          if: inputs.status != 'ok'
           shell: bash
           run: |
               mvn test -q -Dtest=TPCHRegressionMainIT -DfailIfNoTests=false -P-format
@@ -27,22 +35,24 @@ runs:
         #              mvn test -q -Dtest=TPCHRegressionMainIT -DfailIfNoTests=false -P-format
 
         - name: Show Old IGinX log
-          if: always()
+          if: inputs.status != 'ok'
           shell: bash
           run: cat iginx-*.log
         #          run: cat IGinX/iginx-*.log
 
         - name: Stop Old IGinX
+          if: inputs.status != 'ok'
           uses: ./.github/actions/iginxRunner
           with:
               version: ${VERSION}
               if-stop: "true"
 
         - name: Start New IGinX
+          if: inputs.status != 'ok'
           uses: ./.github/actions/iginxRunner
 
         - name: Run Regression Test on New IGinX
-          if: always()
+          if: inputs.status != 'ok'
           shell: bash
           run: |
               mvn test -q -Dtest=TPCHRegressionNewIT -DfailIfNoTests=false -P-format
@@ -50,12 +60,20 @@ runs:
         #              mvn test -q -Dtest=TPCHRegressionNewIT -DfailIfNoTests=false -P-format
 
         - name: Show New IGinX log
-          if: always()
+          if: inputs.status != 'ok'
           shell: bash
           run: cat iginx-*.log
 
         - name: Stop New IGinX
+          if: inputs.status != 'ok'
           uses: ./.github/actions/iginxRunner
           with:
               version: ${VERSION}
               if-stop: "true"
+
+        - name: Get Test Result
+          id: get
+          shell: bash
+          run: |
+              STATUS=$(cat test/src/test/resources/tpch/runtimeInfo/status.txt)
+              echo "status=$STATUS" >> $GITHUB_OUTPUT
