--- a/.github/actions/tpchSingleTest/action.yml
+++ b/.github/actions/tpchSingleTest/action.yml
@@ -14,31 +14,28 @@ runs:
     steps:
         - name: Start Old IGinX
           if: inputs.status != 'ok'
-          uses: ./.github/actions/iginxRunner
-        #          shell: bash
-        #          run: |
-        #              cd IGinX/core/target/iginx-core-${VERSION}
-        #              pwd
-        #              export IGINX_HOME=$PWD
-        #              echo "IGinX home path: $IGINX_HOME"
-        #              cd ..
-        #              chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
-        #              nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
+          shell: bash
+          run: |
+              cd IGinX/core/target/iginx-core-${VERSION}
+              pwd
+              export IGINX_HOME=$PWD
+              echo "IGinX home path: $IGINX_HOME"
+              cd ..
+              chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
+              nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
 
         - name: Run TPCH Test on Old IGinX
           if: inputs.status != 'ok'
           shell: bash
           run: |
+              cp test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt IGinX/test/src/test/resources/tpch/runtimeInfo/
+              cp test/src/test/resources/tpch/runtimeInfo/iteratoionTimes.txt IGinX/test/src/test/resources/tpch/runtimeInfo/
               mvn test -q -Dtest=TPCHRegressionMainIT -DfailIfNoTests=false -P-format
-        #              cp test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt IGinX/test/src/test/resources/tpch/runtimeInfo/
-        #              cp test/src/test/resources/tpch/runtimeInfo/iteratoionTimes.txt IGinX/test/src/test/resources/tpch/runtimeInfo/
-        #              mvn test -q -Dtest=TPCHRegressionMainIT -DfailIfNoTests=false -P-format
 
         - name: Show Old IGinX log
           if: inputs.status != 'ok'
           shell: bash
-          run: cat iginx-*.log
-        #          run: cat IGinX/iginx-*.log
+          run: cat IGinX/iginx-*.log
 
         - name: Stop Old IGinX
           if: inputs.status != 'ok'
@@ -55,9 +52,8 @@ runs:
           if: inputs.status != 'ok'
           shell: bash
           run: |
+              cp IGinX/test/src/test/resources/tpch/runtimeInfo/oldTimeCosts.txt test/src/test/resources/tpch/runtimeInfo/
               mvn test -q -Dtest=TPCHRegressionNewIT -DfailIfNoTests=false -P-format
-        #              cp IGinX/test/src/test/resources/tpch/runtimeInfo/oldTimeCosts.txt test/src/test/resources/tpch/runtimeInfo/
-        #              mvn test -q -Dtest=TPCHRegressionNewIT -DfailIfNoTests=false -P-format
 
         - name: Show New IGinX log
           if: inputs.status != 'ok'
