--- a/.github/actions/tpchSingleTest/action.yml
+++ b/.github/actions/tpchSingleTest/action.yml
@@ -30,6 +30,7 @@ runs:
           run: |
               cp -f test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt IGinX/test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt
               cp -f test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt IGinX/test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt
+              cd IGinX
               mvn test -q -Dtest=TPCHRegressionMainIT -DfailIfNoTests=false -P-format
 
         - name: Show Old IGinX log
