--- a/.github/actions/dbConfWriter/action.yml
+++ b/.github/actions/dbConfWriter/action.yml
@@ -59,7 +59,7 @@ runs:
           uses: ./.github/actions/edit
           with:
               paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
-              statements: s#dir=/path/to/your/parquet#dir=${GITHUB_WORKSPACE}/test/iginx_mn#g
+              statements: s#dir=/path/to/your/parquet#dir=${{ github.workspace }}/test/iginx_mn#g
 
         - if: inputs.DB-name == 'Parquet'
           name: Modify IGinX Config
@@ -101,7 +101,7 @@ runs:
           uses: ./.github/actions/edit
           with:
               paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
-              statements: s#dir=/path/to/your/filesystem#dir=${GITHUB_WORKSPACE}/test/iginx_mn#g
+              statements: s#dir=/path/to/your/filesystem#dir=${{ github.workspace }}/test/iginx_mn#g
 
         - if: inputs.DB-name == 'FileSystem'
           name: Modify IGinX Config
