--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -141,7 +141,7 @@ jobs:
               if: always()
               shell: bash
               run: |
-                  ls ${{ GITHUB_WORKPLACE }}/test
+                  ls ${GITHUB_WORKSPACE}/test
                   cat iginx-*.log
 
             - name: Run 1st Regression Test
