--- a/.github/actions/tpchDataWriter/action.yml
+++ b/.github/actions/tpchDataWriter/action.yml
@@ -9,6 +9,24 @@ inputs:
 runs:
     using: "composite" # Mandatory parameter
     steps:
+        - name: Start New IGinX
+          uses: ./.github/actions/iginxRunner
+
+        - name: Insert Data and Register UDF
+          shell: bash
+          run: mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
+
+        - name: Show New IGinX log
+          if: always()
+          shell: bash
+          run: cat iginx-*.log
+
+        - name: Stop New IGinX
+          uses: ./.github/actions/iginxRunner
+          with:
+              version: ${VERSION}
+              if-stop: "true"
+
         - name: Copy .tbl files
           if: inputs.DB-name == 'FileSystem' || inputs.DB-name == 'Parquet'
           shell: bash
@@ -28,11 +46,12 @@ runs:
               chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
               nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
 
-        - name: Insert Data and Register UDF (for FileSystem and Parquet)
+        - name: Insert Data Again (for FileSystem and Parquet)
           if: inputs.DB-name == 'FileSystem' || inputs.DB-name == 'Parquet'
           shell: bash
           run: |
-              mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
+              cd IGinX
+              mvn test -q -Dtest=TPCHDataGeneratorIT#insertTmpTable -DfailIfNoTests=false -P-format
 
         - name: Show Old IGinX log
           if: inputs.DB-name == 'FileSystem' || inputs.DB-name == 'Parquet'
@@ -41,24 +60,6 @@ runs:
 
         - name: Stop Old IGinX
           if: inputs.DB-name == 'FileSystem' || inputs.DB-name == 'Parquet'
-          uses: ./.github/actions/iginxRunner
-          with:
-              version: ${VERSION}
-              if-stop: "true"
-
-        - name: Start New IGinX
-          uses: ./.github/actions/iginxRunner
-
-        - name: Insert Data and Register UDF
-          shell: bash
-          run: mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
-
-        - name: Show New IGinX log
-          if: always()
-          shell: bash
-          run: cat iginx-*.log
-
-        - name: Stop New IGinX
           uses: ./.github/actions/iginxRunner
           with:
               version: ${VERSION}
