--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -197,3 +197,12 @@ runs:
           with:
               paths: conf/config.properties
               statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false#meta_properties_path=${{ steps.mysql-properties.outputs.path }}|g
+
+        - if: inputs.DB-name == 'FileStore'
+          name: Modify IGinX Config
+          uses: ./.github/actions/edit
+          with:
+            paths: conf/config.properties
+            statements: |
+              s/^#storageEngineList=127.0.0.1#6667#filetore/storageEngineList=127.0.0.1#6667#filetore/g
+              s/data.config.write.buffer.size=104857600/data.config.write.buffer.size=1048576/g
