--- a/conf/config.properties
+++ b/conf/config.properties
@@ -181,7 +181,7 @@ fragmentCacheThreshold=131072
 ### 执行层配置
 ##########################
 
-enablePushDown=true
+enablePushDown=false
 
 useStreamExecutor=false
 
