--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -210,5 +210,5 @@ runs:
           with:
               paths: conf/config.properties
               statements: |
-                  s/^#storageEngineList=127.0.0.1#6667#filetore/storageEngineList=127.0.0.1#6667#filetore/g
+                  s/^#storageEngineList=127.0.0.1#6667#filestore/storageEngineList=127.0.0.1#6667#filestore/g
                   s/data.config.write.buffer.size=104857600/data.config.write.buffer.size=1048576/g
